--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_executable(${PROJECT_NAME} main.cc
-        filters/UserFilter.cpp
-        filters/UserFilter.h
         controllers/api_user.cc
         controllers/api_tickets.cc
         controllers/api_order.cc
+        filters/LoginFilter.cc
 )
 
 # ##############################################################################
