--- a/config.json
+++ b/config.json
@@ -3,11 +3,11 @@
         {
             "name": "default",
             "rdbms": "postgresql",
-            "host": "127.0.0.1",
+            "host": "172.17.0.1",
             "port": 5432,
             "dbname": "simple12306",
             "user": "root",
-            "passwd": "",
+            "passwd": "root",
             "is_fast": false,
             "number_of_connections": 1,
             "timeout": -1.0,
